# ROMP

./: .gitignore  requirements.txt  setup.cfg  setup.py
src/: __init__.py
src/ROMP_psypose/: __init__.py
src/ROMP_psypose/configs/: active_context_2021-07-21_17:04:24.yaml  video.yml
src/ROMP_psypose/core/: _init_paths.py  base.py  check_files.py  test.py  test_win.py
src/ROMP_psypose/lib/: config.py  old_config.py
src/ROMP_psypose/lib/dataset/: image_base.py  internet.py  pw3d.py
src/ROMP_psypose/lib/maps_utils/: result_parser.py
src/ROMP_psypose/lib/models/: __init__.py  base.py  modelv1.py  smpl.py  smpl_wrapper.py
src/ROMP_psypose/lib/utils/: center_utils.py  convert_fbx.py  demo_utils.py  remote_server_utils.py  util.py
src/ROMP_psypose/lib/visualization/: renderer.py
src/core/: check_files.py
src/romp/: __init__.py
src/romp/configs/: eval_3dpw_challenge.yml  eval_3dpw_test.yml  eval_3dpw_test_ft.yml  eval_3dpw_test_resnet.yml  eval_3dpw_test_resnet_ft.yml  eval_cmu_panoptic.yml  eval_crowdpose_test.yml  eval_crowdpose_val.yml  image.yml  multiperson_tracking.yml  v1_hrnet_3dpw_ft.yml  v1_resnet_3dpw_ft.yml  video-batch.yml  video.yml  webcam.yml  webcam_blender.yml
src/romp/lib/: config.py
src/romp/lib/utils/: augments.py  check_files.py  demo_utils.py
src/romp/predict/: video.py
