[metadata]
# replace with your username:
name = ROMP_psypose
version = 0.0.1
author = Landry Bulls
author_email = Landry.S.Bull@dartmouth.edu
description = Implementation of the ROMP repository for use in the PsyPose Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arthur151/ROMP
project_urls =
    Lab Homepage = http://scraplab.org/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src